// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditWithSelect matches snapshot when List style 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="mdc-layout-grid layout-list"
      >
        <div
          class="mdc-layout-grid__inner"
        >
          <div
            class="mdc-layout-grid__cell--span-12"
          >
            <div
              class="mdc-card single-post-card single-post-card__list single-post-basic"
            >
              <div
                class="mdc-card__primary-action single-post-card__primary-action"
                tabindex="0"
              >
                <div
                  class="mdc-card__media mdc-card__media--square single-post-card__media"
                  style="background-image: url(http://test-url.com/test-300x240.png);"
                />
                <div
                  class="single-post-card__primary"
                >
                  <h2
                    class="single-post-card__title title-large"
                  >
                    <div>
                      Example 1 Title
                    </div>
                  </h2>
                  <h3
                    class="single-post-card__subtitle label-small"
                  >
                    <time
                      datetime="2020-03-26 12:00:00"
                    >
                      March 26, 2020
                    </time>
                  </h3>
                </div>
              </div>
              <div
                class="mdc-card__actions"
              >
                <div
                  class="mdc-card__action-buttons"
                >
                  <button
                    class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                  >
                    <span
                      class="mdc-button__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="material-icons mdc-button__icon"
                    >
                      comment
                    </i>
                    <span
                      class="mdc-button__label"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mdc-layout-grid__cell--span-12"
          >
            <div
              class="mdc-card single-post-card single-post-card__list single-post-basic"
            >
              <div
                class="mdc-card__primary-action single-post-card__primary-action"
                tabindex="0"
              >
                <div
                  class="single-post-card__primary"
                >
                  <h2
                    class="single-post-card__title title-large"
                  >
                    <div>
                      Example 2 Title
                    </div>
                  </h2>
                  <h3
                    class="single-post-card__subtitle label-small"
                  >
                    <time
                      datetime="2020-03-26 12:00:00"
                    >
                      March 26, 2020
                    </time>
                  </h3>
                </div>
              </div>
              <div
                class="mdc-card__actions"
              >
                <div
                  class="mdc-card__action-buttons"
                >
                  <button
                    class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                  >
                    <span
                      class="mdc-button__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="material-icons mdc-button__icon"
                    >
                      comment
                    </i>
                    <span
                      class="mdc-button__label"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-layout-grid layout-list"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell--span-12"
        >
          <div
            class="mdc-card single-post-card single-post-card__list single-post-basic"
          >
            <div
              class="mdc-card__primary-action single-post-card__primary-action"
              tabindex="0"
            >
              <div
                class="mdc-card__media mdc-card__media--square single-post-card__media"
                style="background-image: url(http://test-url.com/test-300x240.png);"
              />
              <div
                class="single-post-card__primary"
              >
                <h2
                  class="single-post-card__title title-large"
                >
                  <div>
                    Example 1 Title
                  </div>
                </h2>
                <h3
                  class="single-post-card__subtitle label-small"
                >
                  <time
                    datetime="2020-03-26 12:00:00"
                  >
                    March 26, 2020
                  </time>
                </h3>
              </div>
            </div>
            <div
              class="mdc-card__actions"
            >
              <div
                class="mdc-card__action-buttons"
              >
                <button
                  class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                >
                  <span
                    class="mdc-button__ripple"
                  />
                  <i
                    aria-hidden="true"
                    class="material-icons mdc-button__icon"
                  >
                    comment
                  </i>
                  <span
                    class="mdc-button__label"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mdc-layout-grid__cell--span-12"
        >
          <div
            class="mdc-card single-post-card single-post-card__list single-post-basic"
          >
            <div
              class="mdc-card__primary-action single-post-card__primary-action"
              tabindex="0"
            >
              <div
                class="single-post-card__primary"
              >
                <h2
                  class="single-post-card__title title-large"
                >
                  <div>
                    Example 2 Title
                  </div>
                </h2>
                <h3
                  class="single-post-card__subtitle label-small"
                >
                  <time
                    datetime="2020-03-26 12:00:00"
                  >
                    March 26, 2020
                  </time>
                </h3>
              </div>
            </div>
            <div
              class="mdc-card__actions"
            >
              <div
                class="mdc-card__action-buttons"
              >
                <button
                  class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                >
                  <span
                    class="mdc-button__ripple"
                  />
                  <i
                    aria-hidden="true"
                    class="material-icons mdc-button__icon"
                  >
                    comment
                  </i>
                  <span
                    class="mdc-button__label"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EditWithSelect matches snapshot when Masonry style 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="masonry-grid layout-masonry"
      >
        <div
          class="masonry-grid_column"
          style="width: 33.333333333333336%;"
        >
          <div>
            <div
              class="mdc-card single-post-card single-post-basic"
            >
              <div
                class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
                tabindex="0"
              >
                <div
                  class="single-post-card__primary"
                >
                  <h2
                    class="single-post-card__title title-large"
                  >
                    <div>
                      Example 1 Title
                    </div>
                  </h2>
                  <h3
                    class="single-post-card__subtitle label-small"
                  >
                    <time
                      datetime="2020-03-26 12:00:00"
                    >
                      March 26, 2020
                    </time>
                  </h3>
                </div>
                <div
                  class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
                >
                  <div>
                    Example 1 excerpt
                  </div>
                </div>
              </div>
              <div
                class="mdc-card__actions"
              >
                <div
                  class="mdc-card__action-buttons"
                >
                  <button
                    class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                  >
                    <span
                      class="mdc-button__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="material-icons mdc-button__icon"
                    >
                      comment
                    </i>
                    <span
                      class="mdc-button__label"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="masonry-grid_column"
          style="width: 33.333333333333336%;"
        >
          <div>
            <div
              class="mdc-card single-post-card single-post-basic"
            >
              <div
                class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
                tabindex="0"
              >
                <div
                  class="single-post-card__primary"
                >
                  <h2
                    class="single-post-card__title title-large"
                  >
                    <div>
                      Example 2 Title
                    </div>
                  </h2>
                  <h3
                    class="single-post-card__subtitle label-small"
                  >
                    <time
                      datetime="2020-03-26 12:00:00"
                    >
                      March 26, 2020
                    </time>
                  </h3>
                </div>
                <div
                  class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
                >
                  <div>
                    Example 2 excerpt
                  </div>
                </div>
              </div>
              <div
                class="mdc-card__actions"
              >
                <div
                  class="mdc-card__action-buttons"
                >
                  <button
                    class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                  >
                    <span
                      class="mdc-button__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="material-icons mdc-button__icon"
                    >
                      comment
                    </i>
                    <span
                      class="mdc-button__label"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="masonry-grid layout-masonry"
    >
      <div
        class="masonry-grid_column"
        style="width: 33.333333333333336%;"
      >
        <div>
          <div
            class="mdc-card single-post-card single-post-basic"
          >
            <div
              class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
              tabindex="0"
            >
              <div
                class="single-post-card__primary"
              >
                <h2
                  class="single-post-card__title title-large"
                >
                  <div>
                    Example 1 Title
                  </div>
                </h2>
                <h3
                  class="single-post-card__subtitle label-small"
                >
                  <time
                    datetime="2020-03-26 12:00:00"
                  >
                    March 26, 2020
                  </time>
                </h3>
              </div>
              <div
                class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
              >
                <div>
                  Example 1 excerpt
                </div>
              </div>
            </div>
            <div
              class="mdc-card__actions"
            >
              <div
                class="mdc-card__action-buttons"
              >
                <button
                  class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                >
                  <span
                    class="mdc-button__ripple"
                  />
                  <i
                    aria-hidden="true"
                    class="material-icons mdc-button__icon"
                  >
                    comment
                  </i>
                  <span
                    class="mdc-button__label"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="masonry-grid_column"
        style="width: 33.333333333333336%;"
      >
        <div>
          <div
            class="mdc-card single-post-card single-post-basic"
          >
            <div
              class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
              tabindex="0"
            >
              <div
                class="single-post-card__primary"
              >
                <h2
                  class="single-post-card__title title-large"
                >
                  <div>
                    Example 2 Title
                  </div>
                </h2>
                <h3
                  class="single-post-card__subtitle label-small"
                >
                  <time
                    datetime="2020-03-26 12:00:00"
                  >
                    March 26, 2020
                  </time>
                </h3>
              </div>
              <div
                class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
              >
                <div>
                  Example 2 excerpt
                </div>
              </div>
            </div>
            <div
              class="mdc-card__actions"
            >
              <div
                class="mdc-card__action-buttons"
              >
                <button
                  class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                >
                  <span
                    class="mdc-button__ripple"
                  />
                  <i
                    aria-hidden="true"
                    class="material-icons mdc-button__icon"
                  >
                    comment
                  </i>
                  <span
                    class="mdc-button__label"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EditWithSelect matches snapshot when no Posts are found 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-placeholder is-small"
      >
        <iframe
          aria-hidden="true"
          frameborder="0"
          src="about:blank"
          style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
        <div
          class="components-placeholder__label"
        >
          <span
            class="dashicon dashicons dashicons-sticky"
          />
          Recent Posts
        </div>
        <div
          class="components-placeholder__fieldset"
        >
          No posts found.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-placeholder is-small"
    >
      <iframe
        aria-hidden="true"
        frameborder="0"
        src="about:blank"
        style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
      <div
        class="components-placeholder__label"
      >
        <span
          class="dashicon dashicons dashicons-sticky"
        />
        Recent Posts
      </div>
      <div
        class="components-placeholder__fieldset"
      >
        No posts found.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
